Create routing in the react app

--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20"
+    "express-session": "^1.16.1",
+    "mongoose": "^5.4.20",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
