--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mongoose": "^5.4.20",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
