--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
