--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-sidebar": "^3.0.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
