--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,11 @@
     "classnames": "^2.2.6",
     "formik": "^1.5.2",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-sidebar": "^3.0.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
