--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
+    "lodash.update": "^4.10.2",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
