--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.16.1",
     "mongoose": "^5.5.3",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
