--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "bcrypt": "^3.0.6",
+    "bcrypt": "5.0.0",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
